# realtime-universal-api

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.test.yml  docker-compose.yml
.github/: CODEOWNERS  FUNDING.yml  SECURITY.md  dependabot.yml  pull_request_template.md  stale.yml  support.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  protocol_request.yml  security.yml
.github/workflows/: ci.yml  docker.yml  performance.yml  release.yml
.kiro/specs/realtime-saas-platform/: design.md  requirements.md  tasks.md
realtime-api/: Cargo.toml
realtime-api/benches/: event_processing.rs
realtime-api/migrations/: 001_initial_schema.sql  002_add_audit_logs.sql  003_add_rbac.sql  004_add_audit_logs.sql
realtime-api/src/: alerting.rs  api.rs  auth.rs  billing.rs  config.rs  database.rs  event_service.rs  graphql.rs  lib.rs  main.rs  models.rs  nats.rs  observability.rs  rbac.rs  routes.rs  schema_validator.rs  sse.rs  websocket.rs
realtime-api/tests/: api_property_tests.rs  billing_property_tests.rs  graphql_property_tests.rs  models_test.rs  observability_property_tests.rs  property_tests.rs  rbac_property_tests.rs  websocket_connection_limit_tests.rs
scripts/: init-db.sql
tests/load/: rest-load-test.js  websocket-load-test.js
