[workspace]
members = ["realtime-api"]
resolver = "2"

[workspace.dependencies]
# Web framework and async runtime
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
tracing-opentelemetry = "0.22"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Authentication and security
jsonwebtoken = "9.0"
bcrypt = "0.17"
rand = "0.8"
sha2 = "0.10"

# HTTP client for external APIs
reqwest = { version = "0.11", features = ["json"] }

# NATS JetStream for event streaming
async-nats = "0.33"

# GraphQL
async-graphql = { version = "7.0", features = ["chrono", "uuid"] }
async-graphql-axum = "7.0"

# Streaming
tokio-stream = { version = "0.1", features = ["sync"] }

# Environment and configuration
dotenvy = "0.15"

# Testing
proptest = "1.0"
tokio-test = "0.4"