[package]
name = "realtime-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework and async runtime
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Authentication and security
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }

# HTTP client for external APIs
reqwest = { workspace = true }

# Environment and configuration
dotenvy = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }